@@ -7,7 +7,8 @@ TODO
 
 --- Code Enhancements ---
 
-	* Code colorization (pygments) integration
+	* register & forgot my password options at login page
+	* base page optimization due to settings.py
 	* openid integration
 	* CSS improvement for blockquote's
 	* Fix problems occuring because of the non-occurence of http and www in web addresses of the comment authors.. (admin panel)
