@@ -18,4 +18,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 {% load blog_filters %}
 
-{{ obj.content|emotions|safe }}
+{{ obj.content|emotions|code_colorizer|safe }}
