@@ -25,6 +25,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="icon" href="/media/images/favicon.png" type="image/png"/>
 		<link rel="stylesheet" href="/media/css/style.css">
+		<link rel="stylesheet" href="/media/css/pygments.css">
 		<link href="{{ mainpage.rss_url }}" rel="alternate" type="application/rss+xml" title="raptiye rss feed" />
 		<script type="text/javascript" src="/media/js/jquery.js"></script>
 		<script type="text/javascript" src="/media/js/ibox/ibox.js"></script>
